fixed spacing on home

--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,15 @@ footer {
     h2 {
         font-size: 1.5rem;
     }
+
+    .sm-statement-block {
+        margin: 2rem 0 2rem 0;
+    }
+
+    .sm-statements {
+        margin-bottom: 4rem;
+    }
+
     
     .big-name {
         font-size: 18vw;
@@ -523,7 +532,7 @@ footer {
     }
     
     .statement-block {
-        margin: 4rem 0 2rem 0;
+        margin: 4rem 0 4rem 0;
     }
 
     .project-info h2 {
